# ct-analytics

./: .gitattributes  .gitignore  QWEN.md  README.md  SPEC.md  deploy.sh  diff.txt  git  pyproject.toml  run_dashboard.py  setup-sudoers.sh
.github/workflows/: ci.yml
docs/: 0_home.html  1_comprension.html  2_exploracion_datos.html  3_analisis_rfm.html  4_segmentacion_clientes.html  5_market_basket.html  6_estacionalidad_segmentos.html  6_vision_y_futuro.html  7_persistencia_mlops.html  7_productizacion.html  8_dashboard_pulse.html  8_documentacion_tecnica.html  9_vision_y_futuro.html  search.json
quarto/: 0_home.qmd  1_comprension.qmd  2_exploracion_datos.qmd  3_analisis_rfm.qmd  4_segmentacion_clientes.qmd  5_market_basket.qmd  6_estacionalidad_segmentos.qmd  6_vision_y_futuro.qmd  7_persistencia_mlops.qmd  8_dashboard_pulse.qmd  9_vision_y_futuro.qmd  _quarto.yml
scratch/: extract_eda.py  extract_shapes.py  read_nb.py  summarize_nb.py
src/pulse/: main.py
src/pulse/analytics/: familia.py  mba.py  rfm.py  segmentacion.py  temporalidad.py
src/pulse/config/: paths.py  settings.py
src/pulse/dashboard/: app.py  db.py  queries.py
src/pulse/dashboard/routers/: api.py  pages.py
src/pulse/dashboard/static/css/: styles.css
src/pulse/dashboard/static/js/: charts.js  filters.js
src/pulse/dashboard/templates/: alertas.html  base.html  bundles.html  cliente.html  comparador.html  estacionalidad.html  heatmap_bundles.html  movimientos.html  overview.html
src/pulse/etl/: extraction.py  incremental.py  ingest.py  load.py  transform.py
src/pulse/modeling/: segmentador.py
src/pulse/pipeline/: __main__.py  cli.py  runner.py  validacion.py
templates/: dashboard.html
tests/: test_familia.py  test_mba.py  test_rfm.py  test_segmentacion.py  test_segmentador.py  test_temporalidad.py  test_validacion.py
tests/test_dashboard/: conftest.py  test_api.py  test_pages.py  test_queries.py
