[project]
name = "pulse"
version = "0.1.0"
authors = [
    { name = "Angel Merino", email = "acedeno00@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.9",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
pulse = "pulse:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
