[project]
name = "pulse"
version = "0.1.0"
authors = [
    { name = "Angel Merino", email = "acedeno00@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "mlxtend",
    "fastapi",
    "uvicorn",
    "jinja2",
    "duckdb",
    "pymongo",
    "python-dotenv",
    "pyarrow",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]